i have no idea how but seems like i fixed the html dark mode color

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,12 @@ html {
   font-family: "Noto Sans Arabic", sans-serif;
 }
 
+@media (prefers-color-scheme: dark) {
+  .dark {
+    @apply bg-primaryDark;
+  }
+}
+
 .Toastify__toast-icon > svg {
   @apply fill-sky-500;
 }
